# mcpx-py

./: .env.example  .gitignore  README.md  justfile  mcpx-client.py  mcpx_client.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: chat-structured.py  chat.py  hello_world.py  search.py  tasks.py
mcpx/: __init__.py  __main__.py  builtin_tools.py  chat.py  client.py
mcpx-client/: __init__.py  __main__.py
mcpx_client/: __init__.py  __main__.py  client.py
mcpx_py/: __init__.py  __main__.py  builtin_tools.py  chat.py  client.py
tests/: test_mcpx.py
