[project]
name = "mcpx-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-ollama>=0.2.1",
    "langchain>=0.3.9",
    "mcp>=1.0.0",
    "ollama>=0.4.2",
]

[tool.uv]
dev-dependencies = [
    "python-lsp-server>=1.12.0",
    "ruff>=0.8.1",
]
