[project]
name = "mcpx"
version = "0.1.0"
description = "An mcp.run client for Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "mcpx",
    "ollama>=0.4.2",
    "openai>=1.58.1",
    "psutil>=6.1.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.uv]
package = true
dev-dependencies = [
    "python-lsp-server>=1.12.0",
    "ruff>=0.8.1",
]

[project.scripts]
mcpx-client = "mcpx_client.__main__:main"
